--- a/docs/融合语义位置的差分私有位置隐私保护方法.md
+++ b/docs/融合语义位置的差分私有位置隐私保护方法.md
@@ -1,11 +1,38 @@
 # 融合语义位置的差分私有位置隐私保护方法
 
-## 构建预期距离
+### 期望距离误差
 
-假设 $X$ 表示用户移动区域位置点的集合, $Z$ 表示位置隐私保护机制 $K$ 输出位置点的集合,如果位置隐私保护机制 $K$ 满足地理不可区分性 , 则任 意的两个位置点 $x∈ X$ 和 $x'∈X$ 满足:
+将位置 $x$ 在隐私保护机制 $K$ 上的期望距离误差定义为：
 
 $$
-d_P ( K( x), K( x'))≤ εd_{euc}( x, x')
+E_K=\sum_z K(x)(z)d_{euc}(x,z)
 $$
 
-其中,$d_{euc}(\cdot)$ 表示欧氏距离, $d_P (\cdot)$表示两个随机分布的距离函数, $\epsilon$ 为隐私保护预算. 因为 $z∈ Z$ 为位置 $x$ 和 $x'$ 所在的区域,所以式(３)也 可 表 示为: K( x)( z)≤e εdeuc( x, x′) K( x′)( z) x, x′∈ X, z∈ Z (４) 其中,εdeuc( x, x′)表 示 两 位 置 点 x 和 x′之 间 的 可 区 分 级 别. 根据应用场景的不同,可以使用任何距离度量方式 dx 来替代 deuc,式(３)则可表示为: dP ( K( x), K( x′))≤ dx ( x, x′) (５) 称式(５)为 满 足 ε的 dxＧ隐 私[１８]. εＧ差 分 隐 私 是 使 用 ε作 为隐私预 算 并 同 敏 感 度 相 结 合 来 构 建 位 置 隐 私 保 护 机 制. DP３ＧSLOC 方法用 dx 代替 ε,使 dx 既能用于隐私保护方法的 构建,又能在语义位置中充当敏感度指标. εＧ差分隐私保护中位置的可区 分 性 度 量 常 采 用 两 个 位 置 点 x 与 x′之间 的 欧 氏 距 离 作 为 度 量 标 准. 通 过 上 面 的 推 导 可得 εdh ( x, x′)满足 εＧ差分隐私定义,而 εdeuc( x, x′)满足地理 不可区分性 的 定 义,因 此 dx ( x, x′)可 以 满 足 εＧ差 分 隐 私 的 定义. 本文将位置隐私级别定义为在一个较小的范围内位置 点 可以满足“地理不 可 区 分 性”. 但 在 较 大 距 离 的 范 围 内,为 了 方便 LSP 抽取 相 关 信 息,可 以 允 许 该 区 域 被 LSP 识 别 或 区 分.DP３ＧSLOC 用 l∗ 来 表 示 一 个 较 小 范 围 内 的 可 区 分 的 隐 私度量系数. 在 εＧ差分隐私的定义中, ε通常表示相邻数据库之间的可 区分级别,因此在本文中用 l∗ 表 示 的 ε只 能 在 较 小 范 围 内 的 隐私度量中使用.在选择和确定 l∗ 时,还 需 定 义 一 个 高 保 护 度的 半 径 r∗ ,对 于 一 个 服 务 于 较 大 城 市 的 LBS 应 用 来 说, r∗ ＝１８００m 时能够满足大多数城市的最高隐私 需 求,为 此 本 文将隐私系 数 ε 定 义 为: ε＝ l∗/ r∗ . 由 此 可 见,当 r∗ 范 围 内 的点彼此满足最大可分辨水平为 l∗ 时,攻 击 者 将 无 法 区 分 两 个位置之间的差别. 通过对隐私系 数 ε 的 重 新 定 义,本 文 将 由 εＧ差 分 隐 私 下 表示的欧几里德度量(Euclideanmetric)转换成了可分 辨 性 度 量模式.为了避免混 淆,文 中 用 r 表 示 保 护 区 域 内 地 理 距 离 的半径,用 l表示可分辨水平,在满足 dxＧ隐私的情 况 下,任 意 位置点 x 与 x′之间的可区分级别用 dx ( x, x′)表示
+### 语义位置信息构建
+
+#### 隐私质量
+
++ 隐私质量取决于与 $x$ 高度不可区分的其他位置点的集合 $cover(x)$ 中包含的位置点的数量
++ 隐私质量取决于集合 $cover(x)$ 中包含的位置点的语义质量
+
+位置点 $x$ 的隐私质量用 $m(x)$ 表示，其值域为 $(0,1)$ ，用于表示位置在提供隐私保护时的值。用 $m(A)=\sum_{x\in A}m(x)$ 表示集合 $A$ 的总质量。
+
+将 $m(x)$ 定义为：
+
+$$
+m(x)=a+q(x)b
+$$
+
+其中，$a$ 是为了”占用空间"而分配给每个位置的占用比例
+
+$$
+a=\frac{1}{\vert B_{r_{range}}(x)\vert}
+$$
+
+$b$ 是标准化因子，计算如下：
+
+$$
+1=a\cdot\vert B_{r_{range}}(x)\vert+b\cdot avg_q \\ \Rightarrow b=\frac{1}{avg_q}(1-\frac{\vert B_{r_{small}}(x)\vert}{\vert B_{r_{large}}(x)\vert})
+$$
+
+其中 $B_r(x)=\{x'\vert d_{euc}(x,x')\leq r \}$ 表示以 $x$ 为中心、以 $r$ 为半径的欧几里得度量空间区域；
