add code to mechanism

--- a/docs/融合语义位置的差分私有位置隐私保护方法.md
+++ b/docs/融合语义位置的差分私有位置隐私保护方法.md
@@ -1,5 +1,11 @@
 # 融合语义位置的差分私有位置隐私保护方法
 
+### 地理不可区分性的转换
+
+用 $l^*$ 表示一个较小范围内的可区分的隐私度量系数
+
+隐私系数 $\epsilon$ 的定义为 $\epsilon=l^*/r^*$，由此可见，当 $r^*$ 范围内的点彼此满足最大可分辨水平为 $l^*$ 时，攻击者将无法区分两个位置之间的差别。
+
 ### 期望距离误差
 
 将位置 $x$ 在隐私保护机制 $K$ 上的期望距离误差定义为：
@@ -26,13 +32,67 @@ $$
 其中，$a$ 是为了”占用空间"而分配给每个位置的占用比例
 
 $$
-a=\frac{1}{\vert B_{r_{range}}(x)\vert}
+a=\frac{1}{\vert B_{r_{large}}(x)\vert}
 $$
 
 $b$ 是标准化因子，计算如下：
 
 $$
-1=a\cdot\vert B_{r_{range}}(x)\vert+b\cdot avg_q \\ \Rightarrow b=\frac{1}{avg_q}(1-\frac{\vert B_{r_{small}}(x)\vert}{\vert B_{r_{large}}(x)\vert})
+1=a\cdot\vert B_{r_{small}}(x)\vert+b\cdot avg_q \\ \Rightarrow b=\frac{1}{avg_q}(1-\frac{\vert B_{r_{small}}(x)\vert}{\vert B_{r_{large}}(x)\vert})
 $$
 
 其中 $B_r(x)=\{x'\vert d_{euc}(x,x')\leq r \}$ 表示以 $x$ 为中心、以 $r$ 为半径的欧几里得度量空间区域；
+
+#### 平均隐私水平
+
+平均隐私水平可定义为：
+
+$$
+avg_q=E_xq(B_{r_{small}}(x))
+$$
+
+$avg_q$ 表示期望距离内能够覆盖区域的所有区域的位置点的平均语义质量
+
+#### 需求函数
+
+需求函数是确定语义敏感度的关键，通过需求函数与 $m(x)$ 建立联系来确定该位置的语义敏感度。
+
+设 $B_{l}(x)$ 表示可区分级别 $l$ 的 $d_x$ 区域，$d_x$ -隐私可以保证当 $l$ 越小时，攻击者就越难将真实位置点 $x$ 与 $B_l(x)$ 中的任何位置点区分开。为此，$B_l(x)$ 应该包含一定数量的隐私质量，故 $m(B_l(x))$ 应满足：
+
+$$
+m(B_l(x))\geq req(l)\ \ \forall\ l\geq0,x\in X
+$$
+
+将 $l^*$ 表示一个较小范围内的可区分的隐私度量系数，区域 $B_{l^*}(x)$ 中的点与位置点 $x$ 的关系为“高度不可区分"，而 $cover(x)$ 代表高度不可区分的点的集合，因此在这里函数 $B_{l^*}(x)$ 可以代替 $cover(x)$ 使用。又因为有关 $m(x)$ 的定义要求 $m(cover(x))\geq 1$ ，所以 $l^*$ 的取值应满足 $req(l^*)\leq 1$ 。
+
+此外，因为 $d_x$ -隐私的质量随着 $l$ 变化呈二次增长的趋势（位置点的数量呈二次增长趋势），所以需要获得更多位置点的隐私质量来计算二次函数。故当 $l\in[0,l^*]$ 时，可以将 $req(l)$ 定义为值域在 $[0,1]$ 的二次函数：
+
+$$
+req(l)=(\frac{l}{l^*})^2
+$$
+
+### 融合语义位置的差分私有位置隐私保护算法
+
+DP3-SLOC 算法
+
+输入：用户真实位置点 $x$ ，区域内含有语义信息标签的位置集合 $X$
+
+输出：添加噪声后的扰动位置 $x_0$ ，预期距离误差最小的 $E_{\min}$
+
+1. for each $x^{\prime} \in X$
+2. $\mathrm{l}_{\mathrm{x}^{\prime}}=\mathrm{req}^{-1}\left(\mathrm{~m}\left(\left\{\mathrm{x}^{\prime}\right\}\right)\right) ;/ /$ 可区分级别
+3. $\mathrm{L}=\mathrm{L} \cup \mathrm{l}_{\mathrm{x}^{\prime}}$; $/ /$ 将 $\mathrm{l}_{\mathrm{x}^{\prime}}$ 并人集合 $\mathrm{L}$ 中
+4. end for
+5. for $\mathrm{x}^{\prime} \in \mathrm{X}$
+6. if $\mathrm{l}_{\mathrm{x}^{\prime}}==\mathrm{req}^{-1}\left(\mathrm{~m}\left(\mathrm{~B}_{\mathrm{l}_{\mathrm{x}}}\left(\mathrm{x}^{\prime}\right)\right)\right) / /$ 判断是否满足最小可区分级别
+7. if $\mathrm{d}_{\mathrm{x}}\left(\mathrm{x}, \mathrm{x}^{\prime}\right) \leqslant$ geoarea \& \& $\mathrm{d}_{\mathrm{x}}\left(\mathrm{x}, \mathrm{x}^{\prime}\right) \neq 0 / /$ 判断两者之间是否满足位置隐私
+8. $\mathrm{E}=\mathrm{E} \cup\left\{\left(\mathrm{l}_{x^{\prime}},\mathrm{x}, \mathrm{x}^{\prime}\right)\right\} ; / /$ 将最新的结果放人集合 $\mathrm{E}$ 中
+9. 从三元组 $\mathrm{E}$ 中选出 $\mathrm{l}_x$ 最小的 $\mathrm{E}_{\min }$;
+10. $\mathrm{l}_{x^{\prime}}=\mathrm{E}_{\min }. \mathrm{l}_{x^{\prime}} / /$ 在元组 $\mathrm{E}_{\min }$ 中取出 $\mathrm{l}_{x^{\prime}}$ 的值用于加噪计算
+11. end if
+12. end for
+13. $E=\mathrm l_{x^{\prime}} / r^* ; / /$ 确定隐私系数
+14. $\mathrm{x}_0=\mathrm{x}^{\prime}+\mathrm{P}\left[\mathrm{x}^{\prime}, \frac{\Delta \mathrm{f}}{\varepsilon}\right], \forall \mathrm{x}^{\prime} \in \mathrm{X}_{;} / /$添加噪声
+15. return $x_0, E_{\min } / /$ 返回输出
+
+其中 $req^{-1}(m)=l^*\sqrt m$ 为 $req(\cdot)$ 的倒函数 ，$geoarea$ 是含有语义信息标签位置的范围
